--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,8 @@
 {
 	"extends": "next/core-web-vitals",
-	"plugins": ["unused-imports"],
+	"plugins": [
+		"unused-imports"
+	],
 	"rules": {
 		"no-console": "warn",
 		"indent": [
@@ -17,6 +19,7 @@
 		"import/no-named-as-default": "off",
 		"unused-imports/no-unused-imports": "error",
 		"react/react-in-jsx-scope": "off",
+		"@next/next/no-page-custom-font": "off",
 		"@typescript-eslint/no-var-requires": "off",
 		"@typescript-eslint/no-unused-vars": "off",
 		"@typescript-eslint/no-explicit-any": "off",
